devops: alterado docker-compose e dockerFile para estrutura modular